--- a/testing.ipynb
+++ b/testing.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -123,8 +123,9 @@
       "outputs": [],
       "source": [
         "nse_df = pd.read_excel('nse_data.xlsx')\n",
-        "nse_df = nse_df.iloc[0:100, :]\n",
+        "nse_df = nse_df.iloc[0:50, :]\n",
         "nse_df['Symbol'] = [str(s) + '.NS' for s in nse_df['Symbol']]\n",
+        "stocks = list(set(nse_df['Symbol']))\n",
         "\n",
         "\n",
         "def generate_res(stocks, year):\n",
@@ -135,19 +136,25 @@
         "    profit_amt = 0\n",
         "    year = year\n",
         "\n",
+        "    invest_amt = 0\n",
+        "    after_amount = 0\n",
+        "\n",
         "\n",
         "    for stock_id in list(set(stocks)):\n",
         "        try:\n",
         "            df, dates = get_recom(stock_id, str(year) + '-01-01', str(year) + '-12-31')\n",
         "            if len(dates) >= 1:\n",
         "\n",
-        "                print(stock_id, dates)\n",
+        "                #print(stock_id, dates)\n",
         "\n",
         "                after_price = df[df['Date'] > dates[-1]]['price'].max()\n",
+        "                after_amount = after_amount + after_price\n",
+        "\n",
         "                #print(cprice)\n",
         "                invest_price = df.loc[df['Date'].isin(dates), 'price'].mean()\n",
+        "                invest_amt = invest_amt + invest_price\n",
         "\n",
-        "                print( ' Profit / Loss  :: ' , (after_price - invest_price))\n",
+        "                #print( ' Profit / Loss  :: ' , (after_price - invest_price))\n",
         "                if (after_price - invest_price) >= 0:\n",
         "                    profit = profit + 1\n",
         "                    profit_amt = profit_amt + (after_price - invest_price)\n",
@@ -158,7 +165,7 @@
         "\n",
         "\n",
         "\n",
-        "                print( ' ------------------- \\n')\n",
+        "                #print( ' ------------------- \\n')\n",
         "\n",
         "\n",
         "\n",
@@ -168,15 +175,23 @@
         "\n",
         "    print('---####----' + str(year) +  '----######----' )\n",
         "\n",
-        "    print(profit_amt)\n",
-        "    print(loss_amt)\n",
-        "    print(profit / ( profit + loss))\n",
-        "    print('growth money: ' , profit_amt / (profit_amt - loss_amt))\n",
-        "    \n",
-        "    \n",
+        "    #print(profit_amt)\n",
+        "    #print(loss_amt)\n",
+        "    #print(profit / ( profit + loss))\n",
+        "    #print('growth money: ' , profit_amt / (profit_amt - loss_amt))\n",
+        "    print('Invested : ', invest_amt)\n",
+        "    print('Final amt : ', after_amount)\n",
+        "\n",
+        "    print('growth :   ' , round(((after_amount - invest_amt) / invest_amt)*100) ) \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "    \n",
         "\n",
+        "for year in list(range(2007, 2023)):\n",
+        "    generate_res(stocks, year)\n",
         "\n"
       ]
     },
