--- a/testing.ipynb
+++ b/testing.ipynb
@@ -118,15 +118,240 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['LICI.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1483209000, endDate = 1514658600\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['IRCTC.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1483209000, endDate = 1514658600\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['ADANIGREEN.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1483209000, endDate = 1514658600\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['SBICARD.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1483209000, endDate = 1514658600\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['HDFC.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2017-01-01 -> 2017-12-31)')\n",
+            "\n",
+            "1 Failed download:\n",
+            "['AWL.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1483209000, endDate = 1514658600\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['HAL.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1483209000, endDate = 1514658600\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['ADANITRANS.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n",
+            "\n",
+            "1 Failed download:\n",
+            "['ATGL.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1483209000, endDate = 1514658600\")\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "---####----2017----######----\n",
+            "\n",
+            "Invested :  76780.22412938316\n",
+            "Final amt :  89794.28443145752\n",
+            "growth :    17\n",
+            "------------\n",
+            " \n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['LICI.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['IRCTC.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['SBICARD.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['HDFC.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2018-01-01 -> 2018-12-31)')\n",
+            "\n",
+            "1 Failed download:\n",
+            "['AWL.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1514745000, endDate = 1546194600\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['ADANITRANS.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "---####----2018----######----\n",
+            "\n",
+            "Invested :  83766.09661812086\n",
+            "Final amt :  95635.58688354492\n",
+            "growth :    14\n",
+            "------------\n",
+            " \n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['LICI.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1546281000, endDate = 1577730600\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['SBICARD.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1546281000, endDate = 1577730600\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['HDFC.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2019-01-01 -> 2019-12-31)')\n",
+            "\n",
+            "1 Failed download:\n",
+            "['AWL.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1546281000, endDate = 1577730600\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['ADANITRANS.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "---####----2019----######----\n",
+            "\n",
+            "Invested :  88839.1180138088\n",
+            "Final amt :  99304.38142204285\n",
+            "growth :    12\n",
+            "------------\n",
+            " \n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['LICI.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1577817000, endDate = 1609353000\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['HDFC.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2020-01-01 -> 2020-12-31)')\n",
+            "\n",
+            "1 Failed download:\n",
+            "['AWL.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1577817000, endDate = 1609353000\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['ADANITRANS.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "---####----2020----######----\n",
+            "\n",
+            "Invested :  83458.65430164488\n",
+            "Final amt :  111703.93252182007\n",
+            "growth :    34\n",
+            "------------\n",
+            " \n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['LICI.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1609439400, endDate = 1640889000\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['HDFC.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2021-01-01 -> 2021-12-31)')\n",
+            "\n",
+            "1 Failed download:\n",
+            "['AWL.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1609439400, endDate = 1640889000\")\n",
+            "\n",
+            "1 Failed download:\n",
+            "['ADANITRANS.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "---####----2021----######----\n",
+            "\n",
+            "Invested :  165523.84528829184\n",
+            "Final amt :  201003.10409927368\n",
+            "growth :    21\n",
+            "------------\n",
+            " \n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 Failed download:\n",
+            "['HDFC.NS']: Exception('%ticker%: No price data found, symbol may be delisted (1d 2022-01-01 -> 2022-12-31)')\n",
+            "\n",
+            "1 Failed download:\n",
+            "['ADANITRANS.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "---####----2022----######----\n",
+            "\n",
+            "Invested :  101817.83790884088\n",
+            "Final amt :  115419.63523864746\n",
+            "growth :    13\n",
+            "------------\n",
+            " \n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "nse_df = pd.read_excel('nse_data.xlsx')\n",
-        "nse_df = nse_df.iloc[0:50, :]\n",
+        "nse_df = nse_df.iloc[300:500, :]\n",
         "nse_df['Symbol'] = [str(s) + '.NS' for s in nse_df['Symbol']]\n",
         "stocks = list(set(nse_df['Symbol']))\n",
         "\n",
+        "def isNaN(num):\n",
+        "    return num != num\n",
         "\n",
         "def generate_res(stocks, year):\n",
         "    loss = 0\n",
@@ -148,11 +373,13 @@
         "                #print(stock_id, dates)\n",
         "\n",
         "                after_price = df[df['Date'] > dates[-1]]['price'].max()\n",
-        "                after_amount = after_amount + after_price\n",
+        "                if not isNaN(after_price):\n",
+        "                    after_amount = after_amount + after_price\n",
         "\n",
         "                #print(cprice)\n",
         "                invest_price = df.loc[df['Date'].isin(dates), 'price'].mean()\n",
-        "                invest_amt = invest_amt + invest_price\n",
+        "                if not isNaN(invest_price):\n",
+        "                    invest_amt = invest_amt + invest_price\n",
         "\n",
         "                #print( ' Profit / Loss  :: ' , (after_price - invest_price))\n",
         "                if (after_price - invest_price) >= 0:\n",
@@ -173,7 +400,7 @@
         "            continue\n",
         "\n",
         "\n",
-        "    print('---####----' + str(year) +  '----######----' )\n",
+        "    print('\\n\\n---####----' + str(year) +  '----######----\\n' )\n",
         "\n",
         "    #print(profit_amt)\n",
         "    #print(loss_amt)\n",
@@ -184,56 +411,17 @@
         "\n",
         "    print('growth :   ' , round(((after_amount - invest_amt) / invest_amt)*100) ) \n",
         "\n",
+        "    print('------------\\n \\n' )\n",
+        "\n",
         "\n",
         "\n",
         "\n",
         "\n",
         "    \n",
         "\n",
-        "for year in list(range(2007, 2023)):\n",
+        "for year in list(range(2017, 2023)):\n",
         "    generate_res(stocks, year)\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "9"
-            ]
-          },
-          "execution_count": 16,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "profit"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 18,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "0.3333333333333333"
-            ]
-          },
-          "execution_count": 18,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "profit / ( profit + loss)\n",
-        "# 85% stocks in profit\n"
       ]
     },
     {
