--- a/testing.ipynb
+++ b/testing.ipynb
@@ -121,76 +121,99 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "['AXISBANK.NS',\n",
-              " 'IOC.NS',\n",
-              " 'JSWSTEEL.NS',\n",
-              " 'SUNPHARMA.NS',\n",
-              " 'DMART.NS',\n",
-              " 'BAJFINANCE.NS',\n",
-              " 'SBIN.NS',\n",
-              " 'WIPRO.NS',\n",
-              " 'BRITANNIA.NS',\n",
-              " 'RELIANCE.NS',\n",
-              " 'ITC.NS',\n",
-              " 'M&M.NS',\n",
-              " 'HCLTECH.NS',\n",
-              " 'ADANIENT.NS',\n",
-              " 'LICI.NS',\n",
-              " 'LT.NS',\n",
-              " 'ADANIPORTS.NS',\n",
-              " 'TITAN.NS',\n",
-              " 'GODREJCP.NS',\n",
-              " 'ICICIBANK.NS',\n",
-              " 'ADANITRANS.NS',\n",
-              " 'HDFCBANK.NS',\n",
-              " 'GRASIM.NS',\n",
-              " 'HDFCLIFE.NS',\n",
-              " 'ONGC.NS',\n",
-              " 'POWERGRID.NS',\n",
-              " 'TCS.NS',\n",
-              " 'PIDILITIND.NS',\n",
-              " 'HINDZINC.NS',\n",
-              " 'ULTRACEMCO.NS',\n",
-              " 'TECHM.NS',\n",
-              " 'INFY.NS',\n",
-              " 'BHARTIARTL.NS',\n",
-              " 'TATAMOTORS.NS',\n",
-              " 'COALINDIA.NS',\n",
-              " 'MARUTI.NS',\n",
-              " 'ASIANPAINT.NS',\n",
-              " 'NTPC.NS',\n",
-              " 'DABUR.NS',\n",
-              " 'ADANIGREEN.NS',\n",
-              " 'TATASTEEL.NS',\n",
-              " 'BAJAJ-AUTO.NS',\n",
-              " 'HINDUNILVR.NS',\n",
-              " 'KOTAKBANK.NS',\n",
-              " 'SBILIFE.NS',\n",
-              " 'BAJAJFINSV.NS',\n",
-              " 'SIEMENS.NS',\n",
-              " 'VEDL.NS',\n",
-              " 'LTIM.NS']"
-            ]
-          },
-          "execution_count": 10,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "nse_df = pd.read_excel('nse_data.xlsx')\n",
-        "nse_df = nse_df.iloc[0:50, :]\n",
-        "nse_df['Symbol'] = [str(s) + '.NS' for s in nse_df['Symbol']]\n",
-        "stocks = list(set(nse_df['Symbol']))\n",
-        "stocks.remove('HDFC.NS')\n",
-        "stocks"
+        "# Multi stocks testing\n",
+        "\n",
+        "stock_code = 'PNB.NS'\n",
+        "sdate = '2023-01-01'\n",
+        "edate = '2023-12-31'\n",
+        "\n",
+        "df1 = yf.download(\n",
+        "    tickers = stock_code,\n",
+        "    start=sdate,\n",
+        "    #end=date.today().replace(day=2),\n",
+        "    end = edate,\n",
+        "    interval = \"1d\",\n",
+        "    threads=True,\n",
+        "    group_by = 'ticker',\n",
+        "    progress=False\n",
+        "                    )\n",
+        "\n",
+        "\n",
+        "df1 = df1[['Adj Close', 'Volume']]\n",
+        "df1.columns = ['price', 'vol']\n",
+        "\n",
+        "df1 = df1.reset_index()\n",
+        "avg = df1['price'].mean()\n",
+        "#print(avg)\n",
+        "df1['Week_Number'] = df1['Date'].dt.isocalendar().week\n",
+        "list_t = []\n",
+        "for i in list(set(df1['Week_Number'])):\n",
+        "    try:\n",
+        "        index = df1.loc[df1['Week_Number'] == i, 'Date'].tail(1).index[0]\n",
+        "        last_day_week = df1.loc[df1['Week_Number'] == i, 'Date'].tail(1)[index].strftime('%Y-%m-%d')\n",
+        "        corr_val = df1.loc[df1['Week_Number'] == i,:].corr(numeric_only = True).iloc[0:1, 1].values[0]\n",
+        "        price_list = list(df1.loc[df1['Week_Number'] == i, 'price'])\n",
+        "        pc = round(((price_list[-1] - price_list[0])/price_list[0])*100)\n",
+        "        list_t.append((last_day_week, corr_val,  pc))\n",
+        "    except:\n",
+        "        continue\n",
+        "df = pd.DataFrame(list_t, columns =['date', 'corr', 'pc'])\n",
+        "\n",
+        "\n",
+        "imp_date = []\n",
+        "v_imp_date = []\n",
+        "\n",
+        "try:\n",
+        "    for i in range(len(df)):\n",
+        "        if ((df.loc[i, 'corr'] < 0) &(df.loc[i, 'pc'] <= 0)):\n",
+        "            if ((df.loc[i+1, 'corr'] < 0) &(df.loc[i+1, 'pc'] <= 0)):\n",
+        "                imp_date.append(df.loc[i+1, 'date'])\n",
+        "                if ((df.loc[i+2, 'corr'] < 0) &(df.loc[i+2, 'pc'] <= 0)):\n",
+        "                    v_imp_date.append(df.loc[i+2, 'date'])\n",
+        "    dates = list(set(imp_date) | set(v_imp_date))\n",
+        "except:\n",
+        "    dates = []\n",
+        "\n",
+        "dates = sorted(dates, key=lambda x: datetime.strptime(x, '%Y-%m-%d'))\n",
+        "\n",
+        "df['index'] = df['corr']*df['pc']\n",
+        "df = df.sort_values( by = 'index', ascending= False)\n",
+        "\n",
+        "print(dates)\n",
+        "df"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
@@ -776,7 +799,8 @@
       "outputs": [],
       "source": [
         "def get_recom(stock_code, sdate, edate):\n",
-        "    df1 = yf.download(\n",
+        "    try:\n",
+        "        df1 = yf.download(\n",
         "                        tickers = stock_code,\n",
         "                        start=sdate,\n",
         "                        #end=date.today().replace(day=2),\n",
@@ -786,25 +810,24 @@
         "                        group_by = 'ticker',\n",
         "                        progress=False\n",
         "                    )\n",
+        "    except:\n",
+        "        return \n",
         "\n",
         "\n",
         "    df1 = df1[['Adj Close', 'Volume']]\n",
         "    df1.columns = ['price', 'vol']\n",
         "\n",
+        "    \n",
         "\n",
         "    df1 = df1.reset_index()\n",
         "\n",
+        "    avg = df1['price'].mean()\n",
+        "    #print(avg)\n",
+        "\n",
         "    df1['Week_Number'] = df1['Date'].dt.isocalendar().week\n",
-        "\n",
-        "\n",
-        "\n",
         "\n",
         "    list_t = []\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "    print(df1.head(2))\n",
         "\n",
         "    for i in list(set(df1['Week_Number'])):\n",
         "        try:\n",
@@ -815,73 +838,48 @@
         "\n",
         "\n",
         "            price_list = list(df1.loc[df1['Week_Number'] == i, 'price'])\n",
+        "            pc = round(((price_list[-1] - price_list[0])/price_list[0])*100)\n",
         "\n",
-        "            list_t.append((last_day_week, corr_val, price_list[-1] - price_list[0] ))\n",
+        "            list_t.append((last_day_week, corr_val,  pc))\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "        #if df1.iloc[i:i+5].corr().iloc[0:1, 1].values[0] < -0.01:\n",
-        "        #    print('###########################')\n",
-        "        #    price_list = list(df1.iloc[i:i+5, 0])\n",
-        "        #    print(price_list[-1] - price_list[0])  # if negative buy signal\n",
-        "\n",
-        "        #    print('###########################')\n",
         "\n",
         "        except:\n",
         "            continue\n",
         "\n",
-        "    recom = pd.DataFrame(list_t, columns =['date', 'corr', 'pc'])\n",
-        "    recom = recom.loc[(recom['corr'] < 0) & (recom['pc'] < 0), :].reset_index(drop = True)\n",
+        "    df = pd.DataFrame(list_t, columns =['date', 'corr', 'pc'])\n",
+        "    #print(df)\n",
+        "\n",
+        "    # for buying consecutive -ve correlation with dropping prices \n",
+        "    # surely negative but good price to buy\n",
+        "    # imp date - 2 consecutive -ve days\n",
+        "    # v_imp_date - 3 consecutive -ve days\n",
         "\n",
         "\n",
-        "    #print(recom)\n",
+        "    imp_date = []\n",
+        "    v_imp_date = []\n",
         "\n",
-        "    #for i in range(len(recom)):\n",
-        "    #    try:\n",
-        "    #        diff = datetime.strptime(recom['date'][i], '%Y-%m-%d') - datetime.strptime(recom['date'][i - 1], '%Y-%m-%d')\n",
-        "    #    except:\n",
-        "    #        continue\n",
-        "##\n",
-        "    #    if diff.days <= 30:\n",
-        "    #        recom.loc[recom['date'] == recom['date'][i], 'check'] = 'buy'\n",
+        "    \n",
+        "    try:\n",
+        "        for i in range(len(df)):\n",
+        "            if ((df.loc[i, 'corr'] < 0) &(df.loc[i, 'pc'] <= 0)):\n",
+        "                if ((df.loc[i+1, 'corr'] < 0) &(df.loc[i+1, 'pc'] <= 0)):\n",
+        "                    imp_date.append(df.loc[i+1, 'date'])\n",
+        "                    if ((df.loc[i+2, 'corr'] < 0) &(df.loc[i+2, 'pc'] <= 0)):\n",
+        "                        v_imp_date.append(df.loc[i+2, 'date'])\n",
         "\n",
+        "        dates = list(set(imp_date) | set(v_imp_date))\n",
+        "    except:\n",
+        "        dates = []\n",
+        "    #print(dates)\n",
         "\n",
+        "    df = df[df['corr'] < -0.05]\n",
         "\n",
+        "    df['index'] = df['corr']*df['pc']\n",
+        "    #print(df.sort_values(by = 'index', ascending= False).head(2))\n",
         "\n",
-        "    #recom = recom[recom['corr'] < -0.2]\n",
-        "    #recom = recom[recom['pc'] < -20]\n",
+        "    dates = sorted(dates, key=lambda x: datetime.strptime(x, '%Y-%m-%d'))\n",
         "\n",
-        "    #recom.loc[:, 'check'] = 'buy'\n",
-        "\n",
-        "    #print(recom)\n",
-        "\n",
-        "\n",
-        "    # recom = recom.loc[recom['check'] == 'buy', :].reset_index(drop = True)\n",
-        "\n",
-        "    #  2022-11-18\n",
-        "    recom.loc[recom['date'] == '2022-11-18', 'check'] = 'buy'\n",
-        "    recom = recom.loc[recom['check'] == 'buy', :].reset_index(drop = True)\n",
-        "\n",
-        "\n",
-        "    print(recom)\n",
-        "\n",
-        "    buy_days = []\n",
-        "    for day in recom['date']:\n",
-        "        sdate = datetime.strptime(day, '%Y-%m-%d') + timedelta(days=1)\n",
-        "        date_list = [sdate + timedelta(days=x) for x in range(7)]\n",
-        "        buy_days.extend(date_list)\n",
-        "\n",
-        "\n",
-        "    buy_days = [date_obj.strftime('%Y-%m-%d') for date_obj in buy_days]\n",
-        "    #print(buy_days)\n",
-        "\n",
-        "    #df1 = df1.reset_index()\n",
-        "    df1.loc[df1['Date'].isin(buy_days), 'check'] = 'buy'\n",
-        "\n",
-        "    return df1\n",
-        "\n",
-        "\n"
+        "    return df1, dates"
       ]
     },
     {
