--- a/testing.ipynb
+++ b/testing.ipynb
@@ -135,9 +135,473 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['2023-01-13', '2023-02-17', '2023-06-16', '2023-10-06']\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>date</th>\n",
+              "      <th>corr</th>\n",
+              "      <th>pc</th>\n",
+              "      <th>index</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2023-01-27</td>\n",
+              "      <td>-0.983395</td>\n",
+              "      <td>-11</td>\n",
+              "      <td>10.817341</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>2023-04-28</td>\n",
+              "      <td>0.874419</td>\n",
+              "      <td>6</td>\n",
+              "      <td>5.246515</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>51</th>\n",
+              "      <td>2023-12-29</td>\n",
+              "      <td>0.655525</td>\n",
+              "      <td>8</td>\n",
+              "      <td>5.244201</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>2023-03-03</td>\n",
+              "      <td>0.554196</td>\n",
+              "      <td>8</td>\n",
+              "      <td>4.433571</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>34</th>\n",
+              "      <td>2023-09-01</td>\n",
+              "      <td>0.874959</td>\n",
+              "      <td>5</td>\n",
+              "      <td>4.374796</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>31</th>\n",
+              "      <td>2023-08-11</td>\n",
+              "      <td>0.948496</td>\n",
+              "      <td>4</td>\n",
+              "      <td>3.793984</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>42</th>\n",
+              "      <td>2023-10-27</td>\n",
+              "      <td>0.647864</td>\n",
+              "      <td>5</td>\n",
+              "      <td>3.239322</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>39</th>\n",
+              "      <td>2023-10-06</td>\n",
+              "      <td>-0.404107</td>\n",
+              "      <td>-8</td>\n",
+              "      <td>3.232853</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>30</th>\n",
+              "      <td>2023-08-04</td>\n",
+              "      <td>-0.719686</td>\n",
+              "      <td>-3</td>\n",
+              "      <td>2.159058</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>26</th>\n",
+              "      <td>2023-07-07</td>\n",
+              "      <td>0.162614</td>\n",
+              "      <td>12</td>\n",
+              "      <td>1.951368</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>47</th>\n",
+              "      <td>2023-12-01</td>\n",
+              "      <td>0.612616</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1.837849</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>41</th>\n",
+              "      <td>2023-10-20</td>\n",
+              "      <td>-0.425314</td>\n",
+              "      <td>-4</td>\n",
+              "      <td>1.701255</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50</th>\n",
+              "      <td>2023-12-22</td>\n",
+              "      <td>-0.736408</td>\n",
+              "      <td>-2</td>\n",
+              "      <td>1.472817</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>36</th>\n",
+              "      <td>2023-09-15</td>\n",
+              "      <td>0.154367</td>\n",
+              "      <td>7</td>\n",
+              "      <td>1.080566</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>32</th>\n",
+              "      <td>2023-08-18</td>\n",
+              "      <td>0.907436</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.907436</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>2023-03-24</td>\n",
+              "      <td>-0.291897</td>\n",
+              "      <td>-3</td>\n",
+              "      <td>0.875692</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>45</th>\n",
+              "      <td>2023-11-17</td>\n",
+              "      <td>-0.405152</td>\n",
+              "      <td>-2</td>\n",
+              "      <td>0.810305</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2023-01-06</td>\n",
+              "      <td>-0.778151</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>0.778151</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>49</th>\n",
+              "      <td>2023-12-15</td>\n",
+              "      <td>0.227273</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0.681819</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>2023-04-13</td>\n",
+              "      <td>0.614874</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.614874</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>44</th>\n",
+              "      <td>2023-11-10</td>\n",
+              "      <td>0.300867</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.601734</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>2023-05-05</td>\n",
+              "      <td>-0.589238</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>0.589238</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>22</th>\n",
+              "      <td>2023-06-09</td>\n",
+              "      <td>-0.289289</td>\n",
+              "      <td>-2</td>\n",
+              "      <td>0.578578</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>2023-02-17</td>\n",
+              "      <td>-0.428364</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>0.428364</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>37</th>\n",
+              "      <td>2023-09-22</td>\n",
+              "      <td>0.370037</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.370037</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19</th>\n",
+              "      <td>2023-05-19</td>\n",
+              "      <td>0.319164</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.319164</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>33</th>\n",
+              "      <td>2023-08-25</td>\n",
+              "      <td>-0.118452</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>0.118452</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2023-01-13</td>\n",
+              "      <td>-0.065460</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>0.065460</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>38</th>\n",
+              "      <td>2023-09-29</td>\n",
+              "      <td>-0.219344</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>2023-04-06</td>\n",
+              "      <td>-0.048017</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>20</th>\n",
+              "      <td>2023-05-26</td>\n",
+              "      <td>0.503027</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>2023-02-10</td>\n",
+              "      <td>-0.250176</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>2023-03-17</td>\n",
+              "      <td>0.619031</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>27</th>\n",
+              "      <td>2023-07-14</td>\n",
+              "      <td>-0.566215</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>29</th>\n",
+              "      <td>2023-07-28</td>\n",
+              "      <td>0.743205</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>28</th>\n",
+              "      <td>2023-07-21</td>\n",
+              "      <td>0.436518</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>23</th>\n",
+              "      <td>2023-06-16</td>\n",
+              "      <td>-0.120876</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>2023-03-31</td>\n",
+              "      <td>-0.033541</td>\n",
+              "      <td>2</td>\n",
+              "      <td>-0.067082</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25</th>\n",
+              "      <td>2023-06-30</td>\n",
+              "      <td>-0.057344</td>\n",
+              "      <td>3</td>\n",
+              "      <td>-0.172032</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>24</th>\n",
+              "      <td>2023-06-23</td>\n",
+              "      <td>0.180869</td>\n",
+              "      <td>-2</td>\n",
+              "      <td>-0.361737</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>35</th>\n",
+              "      <td>2023-09-08</td>\n",
+              "      <td>0.461036</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>-0.461036</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>2023-04-21</td>\n",
+              "      <td>0.715809</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>-0.715809</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>46</th>\n",
+              "      <td>2023-11-24</td>\n",
+              "      <td>0.287623</td>\n",
+              "      <td>-3</td>\n",
+              "      <td>-0.862870</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18</th>\n",
+              "      <td>2023-05-12</td>\n",
+              "      <td>0.143370</td>\n",
+              "      <td>-7</td>\n",
+              "      <td>-1.003591</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>43</th>\n",
+              "      <td>2023-11-03</td>\n",
+              "      <td>-0.559443</td>\n",
+              "      <td>2</td>\n",
+              "      <td>-1.118887</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>2023-03-10</td>\n",
+              "      <td>0.461467</td>\n",
+              "      <td>-3</td>\n",
+              "      <td>-1.384401</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2023-02-03</td>\n",
+              "      <td>-0.727721</td>\n",
+              "      <td>2</td>\n",
+              "      <td>-1.455442</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>2023-02-24</td>\n",
+              "      <td>0.407001</td>\n",
+              "      <td>-4</td>\n",
+              "      <td>-1.628003</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>21</th>\n",
+              "      <td>2023-06-02</td>\n",
+              "      <td>-0.557535</td>\n",
+              "      <td>3</td>\n",
+              "      <td>-1.672605</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>40</th>\n",
+              "      <td>2023-10-13</td>\n",
+              "      <td>-0.615494</td>\n",
+              "      <td>3</td>\n",
+              "      <td>-1.846481</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2023-01-20</td>\n",
+              "      <td>0.960847</td>\n",
+              "      <td>-3</td>\n",
+              "      <td>-2.882541</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>48</th>\n",
+              "      <td>2023-12-08</td>\n",
+              "      <td>-0.982965</td>\n",
+              "      <td>3</td>\n",
+              "      <td>-2.948896</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          date      corr  pc      index\n",
+              "3   2023-01-27 -0.983395 -11  10.817341\n",
+              "16  2023-04-28  0.874419   6   5.246515\n",
+              "51  2023-12-29  0.655525   8   5.244201\n",
+              "8   2023-03-03  0.554196   8   4.433571\n",
+              "34  2023-09-01  0.874959   5   4.374796\n",
+              "31  2023-08-11  0.948496   4   3.793984\n",
+              "42  2023-10-27  0.647864   5   3.239322\n",
+              "39  2023-10-06 -0.404107  -8   3.232853\n",
+              "30  2023-08-04 -0.719686  -3   2.159058\n",
+              "26  2023-07-07  0.162614  12   1.951368\n",
+              "47  2023-12-01  0.612616   3   1.837849\n",
+              "41  2023-10-20 -0.425314  -4   1.701255\n",
+              "50  2023-12-22 -0.736408  -2   1.472817\n",
+              "36  2023-09-15  0.154367   7   1.080566\n",
+              "32  2023-08-18  0.907436   1   0.907436\n",
+              "11  2023-03-24 -0.291897  -3   0.875692\n",
+              "45  2023-11-17 -0.405152  -2   0.810305\n",
+              "0   2023-01-06 -0.778151  -1   0.778151\n",
+              "49  2023-12-15  0.227273   3   0.681819\n",
+              "14  2023-04-13  0.614874   1   0.614874\n",
+              "44  2023-11-10  0.300867   2   0.601734\n",
+              "17  2023-05-05 -0.589238  -1   0.589238\n",
+              "22  2023-06-09 -0.289289  -2   0.578578\n",
+              "6   2023-02-17 -0.428364  -1   0.428364\n",
+              "37  2023-09-22  0.370037   1   0.370037\n",
+              "19  2023-05-19  0.319164   1   0.319164\n",
+              "33  2023-08-25 -0.118452  -1   0.118452\n",
+              "1   2023-01-13 -0.065460  -1   0.065460\n",
+              "38  2023-09-29 -0.219344   0  -0.000000\n",
+              "13  2023-04-06 -0.048017   0  -0.000000\n",
+              "20  2023-05-26  0.503027   0   0.000000\n",
+              "5   2023-02-10 -0.250176   0  -0.000000\n",
+              "10  2023-03-17  0.619031   0   0.000000\n",
+              "27  2023-07-14 -0.566215   0  -0.000000\n",
+              "29  2023-07-28  0.743205   0   0.000000\n",
+              "28  2023-07-21  0.436518   0   0.000000\n",
+              "23  2023-06-16 -0.120876   0  -0.000000\n",
+              "12  2023-03-31 -0.033541   2  -0.067082\n",
+              "25  2023-06-30 -0.057344   3  -0.172032\n",
+              "24  2023-06-23  0.180869  -2  -0.361737\n",
+              "35  2023-09-08  0.461036  -1  -0.461036\n",
+              "15  2023-04-21  0.715809  -1  -0.715809\n",
+              "46  2023-11-24  0.287623  -3  -0.862870\n",
+              "18  2023-05-12  0.143370  -7  -1.003591\n",
+              "43  2023-11-03 -0.559443   2  -1.118887\n",
+              "9   2023-03-10  0.461467  -3  -1.384401\n",
+              "4   2023-02-03 -0.727721   2  -1.455442\n",
+              "7   2023-02-24  0.407001  -4  -1.628003\n",
+              "21  2023-06-02 -0.557535   3  -1.672605\n",
+              "40  2023-10-13 -0.615494   3  -1.846481\n",
+              "2   2023-01-20  0.960847  -3  -2.882541\n",
+              "48  2023-12-08 -0.982965   3  -2.948896"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Multi stocks testing\n",
         "\n",
@@ -194,6 +658,7 @@
         "\n",
         "dates = sorted(dates, key=lambda x: datetime.strptime(x, '%Y-%m-%d'))\n",
         "\n",
+        "df = df[df['corr'] < -0.1]\n",
         "df['index'] = df['corr']*df['pc']\n",
         "df = df.sort_values( by = 'index', ascending= False)\n",
         "\n",
